--- a/styles.css
+++ b/styles.css
@@ -15,6 +15,12 @@ span {
   color: #2c3e50;
 }
 
+a {
+  text-decoration: none;
+  font-weight: 700;
+  color: #85929E;
+}
+
 .main {
   display: grid;
   grid-auto-flow: row;
@@ -30,6 +36,10 @@ span {
 
 .intro-text {
   font-size: 32px;
+}
+
+.instruction-text {
+  font-size: 28px;
 }
 
 @media screen and (min-width: 768px) {
