--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,6 @@
 body {
   display: block;
   margin: 0;
-  padding: 1em;
   background-color: #f8f9f9;
   font-family: 'Markazi Text', serif;
 }
@@ -26,13 +25,42 @@ a {
   grid-auto-flow: row;
   justify-content: center;
   margin: 0 auto;
+  padding: 1em;
+}
+
+.header-wrapper {
   width: 100%;
-  height: 100%;
+  margin: 0;
+  height: 250px;
+  overflow: hidden;
+  position: relative;
+  margin-top: 0;
+  margin-bottom: 16px;
+  margin-left: 0;
+  margin-right: 0;
+  width: 100%;
+}
+
+.header-container {
+  /* display: grid; */
+  /* justify-content: center; */
+  /* align-items: center; */
+}
+
+.header-img {
+  width: 100%;
 }
 
 .header-text {
-  font-size: 48px;
+  font-size: 64px;
   margin: 0;
+  color: #fff;
+  text-align: center;
+  text-transform: uppercase;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
 .intro-text {
@@ -47,5 +75,9 @@ a {
 @media screen and (min-width: 768px) {
   .main {
     width: 75%;
+  }
+
+  .header-wrapper {
+    height: 400px;
   }
 }
