--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,9 @@
 .app-wrapper {
   width: 95%;
   margin: 85px auto;
+  display: grid;
+  grid-auto-flow: row;
+  gap: 2rem;
 }
 
 @media screen and (min-width: 768px) {
