--- a/src/components/Info/Info.css
+++ b/src/components/Info/Info.css
@@ -1,3 +1,16 @@
+.info-headline {
+    font-size: 64px;
+    font-style: italic;
+    text-align: center;
+}
+
+.info-headline-text {
+    font-size: 48px;
+    text-align: center;
+    margin-bottom: 64px;
+}
+
 .info-text {
     font-size: 32px;
+    text-align: center;
 }
