--- a/src/components/Info/Info.css
+++ b/src/components/Info/Info.css
@@ -1,16 +1,19 @@
 .info-headline {
-    font-size: 64px;
-    font-style: italic;
-    text-align: center;
+  font-size: 64px;
+  font-style: italic;
+  text-align: center;
+  margin-bottom: 0px;
 }
 
 .info-headline-text {
-    font-size: 48px;
-    text-align: center;
-    margin-bottom: 64px;
+  font-size: 40px;
+  text-align: center;
+  margin-top: -1.5rem;
+  margin-bottom: 4rem;
 }
 
 .info-text {
-    font-size: 32px;
-    text-align: center;
+  font-size: 28px;
+  text-align: center;
+  margin-bottom: 2rem;
 }
